[tool.poetry]
name = "rasa-vanya"
version = "0.1.0"
description = ""
authors = ["Anton Shelekhov <antshel27@gmail.com>"]
readme = "README.md"
packages = [{include = "rasa_vanya"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
